--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
   align-items: center;
   color: #e5f7ff;
 }
- .logo {
-  width: 28px;
-  height: 28px;
+.logo {
+  width: 32px;  /* aumentei de 28 para 32 */
+  height: 32px; /* aumentei de 28 para 32 */
   border-radius: 10px;
   object-fit: contain;
   filter: drop-shadow(0 4px 10px rgba(34,197,94,0.35));
