--- a/index.html
+++ b/index.html
@@ -53,20 +53,22 @@
   font-weight: 900;
   letter-spacing: .2px;
 }
- .cta {
+.cta {
   display: inline-flex;
   align-items: center;
-  gap: 10px;
+  gap: 8px;
   background: linear-gradient(90deg,var(--green),#39e08a);
   color: #062b1b;
-  padding: 10px 14px;
-  border-radius: 12px;
+  padding: 8px 12px; /* 20% menor que o original */
+  border-radius: 10px;
   font-weight: 800;
+  font-size: 0.92em;
   border: 1px solid rgba(0,0,0,.08);
+  transition: all 0.2s ease;
 }
 .cta:hover {
   transform: translateY(-1px);
-  box-shadow: 0 10px 24px rgba(34,197,94,.35);
+  box-shadow: 0 8px 20px rgba(34,197,94,.35);
 }
 
     /* Hero */
