--- a/index.html
+++ b/index.html
@@ -159,9 +159,12 @@
   margin: 20px 0;
   color: #fff;
 }
- .plano-preco small {
-  font-size: 16px;
-  font-weight: 400;
+.plano-preco {
+  font-size: 36px;
+  font-weight: 700;
+  margin: 20px 0;
+  color: #fff;
+  text-align: center; /* Adicione esta linha para centralizar */
 }
  .plano-botao {
   display: inline-block;
