--- a/index.html
+++ b/index.html
@@ -166,8 +166,10 @@
   color: #fff;
   text-align: center; /* Adicione esta linha para centralizar */
 }
- .plano-botao {
-  display: inline-block;
+/* ... (mantenha o resto do CSS igual) ... */
+
+.plano-botao {
+  display: block;
   background: linear-gradient(90deg, #22c55e, #25D366);
   color: #062b1b;
   padding: 12px 30px;
@@ -175,6 +177,9 @@
   text-decoration: none;
   font-weight: 700;
   box-shadow: 0 4px 15px rgba(37, 211, 102, 0.3);
+  margin: 0 auto; /* Centraliza o botão */
+  text-align: center; /* Centraliza o texto */
+  width: fit-content; /* Largura ajustável */
 }
     /* Footer */
     footer{margin-top:48px;background:linear-gradient(135deg,#0d3c61,#082a44);color:#e8f5ff;padding:28px 16px;border-top:4px solid var(--green)}
