--- a/index.html
+++ b/index.html
@@ -522,7 +522,10 @@
     <div class="plano-box com-bloqueio">
       <div class="plano-destaque">MAIS VENDIDO</div>
       <h3 class="plano-titulo">Rastreador com Bloqueio</h3>
-      <div class="plano-preco">R$54,90 <small>/mês</small><div style="font-size:18px;margin-top:5px">ou R$49,90 até o vencimento</div></div>
+      <div class="plano-preco">
+  R$54,90 <small>/mês</small>
+  <div class="desconto-vencimento">ou <span class="valor-destaque">R$49,90</span> até o vencimento</div>
+</div>
       <p class="plano-descricao">Segurança completa com bloqueio remoto do motor</p>
       <ul class="plano-beneficios">
         <li>Bloqueio remoto via aplicativo</li>
