--- a/index.html
+++ b/index.html
@@ -301,7 +301,36 @@
     #beneficiosBox strong {
       color: #0d3c61;
     }
+/* Adicione isso na seção de estilos */
+.oferta-destaque {
+  font-size: 18px;
+  margin-top: 5px;
+  text-align: center;
+}
 
+.oferta-destaque .valor-promo {
+  color: #86efac; /* Verde claro */
+  font-weight: 600;
+  display: inline-block;
+  position: relative;
+  padding: 0 5px;
+}
+
+.oferta-destaque .valor-promo::after {
+  content: '';
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: currentColor;
+  animation: pisca 1.5s infinite;
+}
+
+@keyframes pisca {
+  0%, 100% { opacity: 1; }
+  50% { opacity: 0.5; }
+}
     /* Estilos para os botões */
     .botaoZap {
       display: inline-block;
@@ -536,7 +565,9 @@
     <div class="plano-box com-bloqueio">
       <div class="plano-destaque">MAIS VENDIDO</div>
       <h3 class="plano-titulo">Rastreador com Bloqueio</h3>
-      <div class="plano-preco">R$54,90 <small>/mês</small><div style="font-size:18px;margin-top:5px">ou R$49,90 até o vencimento</div></div>
+      <div class="plano-preco">R$54,90 <small>/mês</small>
+  <div class="oferta-destaque">ou <span class="valor-promo">R$49,90 até o vencimento</span></div>
+</div>
       <p class="plano-descricao">Segurança completa com bloqueio remoto do motor</p>
       <ul class="plano-beneficios">
         <li>Bloqueio remoto via aplicativo</li>
