--- a/index.html
+++ b/index.html
@@ -478,14 +478,14 @@
         <option value="sem">Sem bloqueio</option>
       </select>
       <button onclick="verValor()">VER VALOR</button>
-      <div id="countdownContainer" style="display:none;margin-top:14px;background:#fff8e1;padding:12px;border-radius:12px;border-left:5px solid #f1c40f;align-items:center;justify-content:center;gap:12px">
-        <div style="font-size:22px;color:#e74c3c">⏱️</div>
-        <div>
-          <strong style="color:#e74c3c">OFERTA! GANHE 10% DE DESCONTO NA INSTALAÇÃO!</strong><br>
-          <div id="countdown" style="font-size:18px;font-weight:800">60:00</div>
-          <small style="color:#666">Oferta válida apenas por 60 minutos</small>
-        </div>
-      </div>
+     <div id="countdownContainer" style="display:none;margin-top:14px;background:#fff;padding:12px;border-radius:12px;border-left:5px solid #000;align-items:center;justify-content:center;gap:12px;color:#000">
+  <div style="font-size:22px">⏱️</div>
+  <div>
+    <strong style="color:#000">OFERTA! GANHE 10% DE DESCONTO NA INSTALAÇÃO!</strong><br>
+    <div id="countdown" style="font-size:18px;font-weight:800;color:#000">60:00</div>
+    <small style="color:#555">Oferta válida apenas por 60 minutos</small>
+    </div>
+  </div>
     </div>
   </div>
 
