--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
   <section class="hero">
     <div class="wrap card">
       <div>
-        <span class="kicker"><span class="spark"></span> Rastreando em tempo real</span>
+        <span class="kicker"><span class="spark"></span> Monitoramento em tempo real</span>
         <h1 class="title">Consulte o valor da instalação — com e sem bloqueio</h1>
         <p class="lead">Instalação a domicílio, app iOS/Android e suporte por WhatsApp. Tecnologia 4G com plataforma Web.</p>
       </div>
