--- a/index.html
+++ b/index.html
@@ -496,6 +496,18 @@
   100% { opacity: 0.9; }
 }
 
+.popup-price {
+  font-size: 22px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.popup-price strong {
+  font-weight: 900;
+  color: #166534; /* Verde mais escuro */
+  text-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+
 .plano-preco > div {
   font-size: 18px !important; /* Mantém o tamanho original */
   margin-top: 5px !important;
@@ -863,7 +875,7 @@
           document.getElementById('popup-header').style.background='linear-gradient(135deg,#0d3c61,#22c55e)';
           
           document.getElementById('popup-content').innerHTML=`
-            <div class="popup-price" id="popup-price">R$ ${valorInstalacao.toFixed(2).replace('.',',')}</div>
+            <div class="popup-price" id="popup-price">Por apenas: R$ ${valorInstalacao.toFixed(2).replace('.',',')}</strong></div>
             <div class="popup-details" id="popup-details">
               <p>📍 Cidade: <span id="popup-address">${bairroInput}</span></p>
               <p>🚗 Veículos: <span id="popup-vehicles">${quantidade}</span></p>
