--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@
           document.getElementById('popup-header').style.background='linear-gradient(135deg,#0d3c61,#22c55e)';
           
           document.getElementById('popup-content').innerHTML=`
-            <div class="popup-price" id="popup-price">Por apenas: R$ ${valorInstalacao.toFixed(2).replace('.',',')}</strong></div>
+            <div class="popup-price" id="popup-price">Instalação apenas: R$ ${valorInstalacao.toFixed(2).replace('.',',')}</strong></div>
             <div class="popup-details" id="popup-details">
               <p>📍 Cidade: <span id="popup-address">${bairroInput}</span></p>
               <p>🚗 Veículos: <span id="popup-vehicles">${quantidade}</span></p>
