--- a/index.html
+++ b/index.html
@@ -503,9 +503,8 @@
 }
 
 .popup-price strong {
-  font-weight: 900;
-  color: #166534; /* Verde mais escuro */
-  text-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  font-weight: 800;
+  color: #16a34a; /* Verde escuro para destaque */
 }
 
 .plano-preco > div {
