--- a/index.html
+++ b/index.html
@@ -927,7 +927,7 @@
           document.getElementById('resultadoFixo').style.display='block';
           
           beneficiosBox.innerHTML=`
-            <h3>📌 Benefícios da Instalação</h3>
+            <h3>📌 Instale seu GPS e garanta:</h3>
             <ul>
               <li><strong>Instalação profissional</strong> no conforto da sua casa ou trabalho</li>
               <li><strong>Localização em tempo real</strong> com atualizações a cada 30 segundos</li>
