--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@
           
           beneficiosBox.innerHTML=`
           <h3 style="font-size: clamp(18px, 4vw, 22px); font-weight: 700; color: #0d3c61; line-height: 1.4; text-align: center;">
-          Com uma instalação de apenas <span style="white-space: nowrap;">R$ ${valorInstalacao.toFixed(2).replace('.', ',')}</span> e 
+          Com uma instalação de apenas <span style="white-space: nowrap;">R$ ${valorInstalacao.toFixed(2).replace('.', ',')}</span> e só
            <span style="white-space: nowrap;">R$ ${valorMensal.toFixed(2).replace('.', ',')}</span> mensal,<br>
            <span style="white-space: nowrap;">menos de R$ ${valorDiario} por dia</span>, você garante:
            </h3>
