--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
   <section id="lead-capture" class="lead-wrap">
     <div class="lead-card">
       <h3>📇 Quer que a gente entre em contato?</h3>
-      <p>Preencha seus dados para enviar a mensagem para a nossa equipe.</p>
+      <p>Preencha seus dados para enviar a mensagem para a nossa equipep.</p>
 
       <form id="leadForm">
         <div class="lead-grid">
