--- a/index.html
+++ b/index.html
@@ -343,6 +343,7 @@
     .instalacoes-nav{display:flex;justify-content:center;align-items:center;margin-top:20px;gap:15px}
     .instalacoes-prev,.instalacoes-next{background:linear-gradient(90deg,#22c55e,#0d3c61);color:#fff;border:0;width:40px;height:40px;border-radius:50%;font-size:18px;cursor:pointer;display:flex;align-items:center;justify-content:center;box-shadow:0 4px 8px rgba(0,0,0,.1)}
     .instalacoes-dots{display:flex;gap:8px}
+    .instalacoes-dot{width:12px;height:12px;border-radius:50%;background:#e0e0e0;cursor:pointer}
     .instalacoes-dot.active{background:linear-gradient(90deg,#22c55e,#0d3c61);transform:scale(1.2)}
 
     /* FAQ (cartões claros, textos escuros mantidos) */
@@ -554,108 +555,6 @@
 
 </style> <!-- NÃO APAGUE ESSE </style>! -->
 
-  </style>
-
-  <!-- ====== DESKTOP-ONLY (não altera o mobile) ====== -->
-  <style media="(min-width:1024px)">
-    /* Layout base */
-    .wrap { max-width: 1240px; padding: 0 24px; }
-    .nav { height: 72px; }
-    header { backdrop-filter: blur(10px) saturate(160%); }
-
-    /* Hero refinado */
-    .hero { padding: 64px 0 24px; }
-    .hero .card { grid-template-columns: 1.1fr .9fr; gap: 36px; align-items: center; }
-    .title { font-size: clamp(38px, 3.2vw, 56px); line-height: 1.12; margin-bottom: 10px; }
-    .lead { font-size: 18px; max-width: 640px; }
-
-    .headline-video-container{
-      max-height: 420px;
-      margin-bottom: 0;
-      padding-left: 0; padding-right: 0;
-      border-radius: 18px;
-      box-shadow: 0 18px 46px rgba(0,0,0,.28);
-    }
-    .headline-video { height: 420px; object-fit: cover; }
-
-    /* Form centralizado com respiro */
-    .form-container { margin: 28px 0 8px; }
-    .form-box { max-width: 520px; padding: 36px 32px; }
-
-    /* Seções genéricas */
-    .section-title { font-size: clamp(30px, 2.2vw, 40px); margin: 56px 0 18px; }
-    .section-subtitle { font-size: 18px; max-width: 760px; }
-
-    /* Carrossel de instalações e recuperações alinhados ao grid largo */
-    .instalacoes-carrossel,
-    .carousel,
-    .depoimentos-carrossel,
-    .faq-container,
-    .app-download-section,
-    .planos-container,
-    .headline-video-container,
-    .form-container,
-    .hero .wrap { max-width: 1240px; margin-left: auto; margin-right: auto; }
-
-    /* Instalações – imagem maior e dots mais elegantes */
-    .instalacoes-carrossel { padding: 0; }
-    .instalacoes-container { border-radius: 16px; }
-    .instalacoes-slide img { border-radius: 14px; }
-    .instalacoes-nav { gap: 18px; }
-    .instalacoes-prev, .instalacoes-next { width: 44px; height: 44px; }
-
-    /* Recuperações – caixa maior */
-    .carousel { max-width: 1240px; border-radius: 16px; padding: 0; }
-    .carousel img { display: block; }
-
-    /* Planos – grid 2 colunas, alturas alinhadas */
-    .planos-container {
-      max-width: 1240px;
-      display: grid;
-      grid-template-columns: repeat(2, minmax(0, 1fr));
-      align-items: stretch;
-      gap: 28px;
-      padding: 0 24px;
-      margin-top: 56px;
-    }
-    .plano-box { max-width: none; height: 100%; padding: 34px; transition: transform .18s ease, box-shadow .18s ease; }
-    .plano-box:hover { transform: translateY(-4px); box-shadow: 0 18px 48px rgba(13,60,97,.35); }
-    .plano-preco { font-size: 40px; }
-
-    /* Depoimentos – largura total e navegação confortável */
-    .depoimentos-carrossel { max-width: 1240px; }
-    .carrossel-container { border-radius: 16px; }
-    .carrossel-slide img { border-radius: 14px; }
-    .carrossel-prev, .carrossel-next { width: 44px; height: 44px; }
-
-    /* Apps – cards alinhados e com respiro */
-    .app-download-section { max-width: 1240px; }
-    .app-download-section .app-button > div { height: 68px; }
-
-    /* FAQ – mais legível no desktop */
-    .faq-container { max-width: 1100px; }
-    .faq-question { padding: 22px 24px; }
-    .faq-answer p { padding: 0 24px 22px; font-size: 16px; }
-
-    /* Benefícios (caixa branca) – largura controlada */
-    #beneficiosBox { max-width: 1100px; padding: 28px; }
-
-    /* Footer – em linha e centralizado */
-    footer .wrap {
-      flex-direction: row;
-      flex-wrap: wrap;
-      gap: 14px 24px;
-      justify-content: center;
-      text-align: center;
-      max-width: 1240px;
-    }
-
-    /* WhatsApp fixo – um pouco menor no desktop para não competir */
-    .whatsapp-fixo img { width: 56px; height: 56px; }
-
-    /* Helpers opcionais (caso use futuramente) */
-    .desktop-only { display: block !important; }
-    .mobile-only { display: none !important; }
   </style>
 </head>
 <body>
@@ -1031,9 +930,6 @@
           
           document.getElementById('resultadoFixo').style.display='block';
           
-          const valorMensal = (tipo==='com' ? (49.90*quantidade) : (39.90*quantidade));
-          const valorDiario = (valorMensal / 31).toFixed(2).replace('.', ',');
-
           beneficiosBox.innerHTML=`
           <h3 style="font-size: clamp(18px, 4vw, 22px); font-weight: 700; color: #0d3c61; line-height: 1.4; text-align: center;">
           Com uma instalação de apenas <span style="white-space: nowrap;">R$ ${valorInstalacao.toFixed(2).replace('.', ',')}</span> e só
