--- a/index.html
+++ b/index.html
@@ -1119,16 +1119,16 @@ footer {
   
   <div class="frota-stats">
     <div class="frota-stat">
-      <strong>Até 30%*</strong>
+      <strong>Até 40%*</strong>
       <small>Redução em gastos com combustível</small>
     </div>
     <div class="frota-stat">
-      <strong>+20%*</strong>
+      <strong>+80%*</strong>
       <small>Eficiência operacional</small>
     </div>
     <div class="frota-stat">
       <strong>24/7</strong>
-      <small>Alertas em tempo real</small>
+      <small>Sob seu controle</small>
     </div>
   </div>
   
