--- a/index.html
+++ b/index.html
@@ -864,6 +864,23 @@ footer {
   color: rgba(216, 231, 255, 0.6);
 }
 
+/* Estilo para o GIF da seção de frota */
+.frota-gif-container {
+  width: 100%;
+  max-width: 800px;
+  margin: 20px auto;
+  text-align: center;
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+}
+
+.frota-gif-container img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 12px;
+}
+
 @media (max-width: 768px) {
   .frota-header h2 {
     font-size: 26px;
@@ -1071,12 +1088,16 @@ footer {
     </div>
   </div>
 
-  <!-- NOVO BLOCO PARA FROTAS -->
-<!-- NOVO BLOCO PARA FROTAS - SEM CAIXA ENVOLTA -->
+  <!-- NOVO BLOCO PARA FROTAS - SEM CAIXA ENVOLTA -->
 <div class="wrap">
   <div class="frota-header">
     <h2>Solução Completa para Gestão de Frotas</h2>
     <p>Controle total sobre seus veículos e motoristas com nossa tecnologia de rastreamento avançada</p>
+  </div>
+  
+  <!-- GIF adicionado abaixo do título e subtítulo -->
+  <div class="frota-gif-container">
+    <img src="beneficios/tela.gif" alt="Demonstração do sistema de gestão de frotas">
   </div>
   
   <div class="frota-benefits">
@@ -1140,7 +1161,6 @@ footer {
     *Valores médios estimados; resultados variam por operação.
   </div>
 </div>
-  </div>
 
   <!-- Depoimentos -->
   <div class="depoimentos-container">
