--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@ footer {
   <div class="form-container">
     <div class="form-box shadow">
       <h2>📍 Consulte o valor da instalação aqui</h2>
-      <input type="text" id="bairroInput" placeholder="Digite sua cidade/bairro no RJ" />
+      <input type="text" id="bairroInput" placeholder="Digite sua cidade ou bairro no RJ" />
       <input type="number" id="quantidadeInput" placeholder="Quantidade de veículos" min="1" />
       <select id="tipoRastreador">
         <option value="com">Com bloqueio</option>
