--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,7 @@ footer {
 
   <!-- Carrossel de instalações -->
   <div class="instalacoes-carrossel">
-    <h2 class="section-title">🔧 Algumas Instalações</h2>
+    <h2 class="section-title">🔧 Veja algumas Instalações</h2>
     <p class="section-subtitle">Confira nosso trabalho profissional de instalação em veículos de todo o Rio de Janeiro.</p>
     <div class="instalacoes-container">
       <div class="instalacoes-track">
