--- a/index.html
+++ b/index.html
@@ -1045,6 +1045,13 @@ footer {
     <img src="Recuperacao/Recuperacao6.jpg" alt="Veículo recuperado 6" />
   </div>
 
+  <div style="text-align:center; margin: 30px auto; max-width: 800px;">
+  <h3 style="font-size: 22px; font-weight: 700; color: #fff; line-height: 1.4;">
+    Veja que o valor que você paga por mês é mais barato que um lanche que você faz em um único dia.
+  </h3>
+</div>
+
+
   <!-- Planos -->
   <div class="planos-container">
     <div class="plano-box com-bloqueio">
