--- a/index.html
+++ b/index.html
@@ -1045,9 +1045,10 @@ footer {
     <img src="Recuperacao/Recuperacao6.jpg" alt="Veículo recuperado 6" />
   </div>
 
-  <div style="text-align:center; margin: 30px auto; max-width: 800px;">
-  <h3 style="font-size: 22px; font-weight: 700; color: #fff; line-height: 1.4;">
-    Veja que o valor que você paga por mês é mais barato que um lanche que você faz em um único dia.
+<div style="text-align:center; margin: 30px auto; max-width: 800px; background: linear-gradient(135deg, #3498db, #2ecc71); border-radius: 12px; padding: 25px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
+  <h3 style="font-size: 26px; font-weight: 700; color: #fff; line-height: 1.4; margin: 0; text-shadow: 1px 1px 3px rgba(0,0,0,0.2);">
+    🔒 Rastreamento completo por <span style="background: rgba(255,255,255,0.2); padding: 2px 8px; border-radius: 6px;">MENOS DE R$ 2 POR DIA</span>! 
+    <br>Mais barato que um cafézinho! ☕
   </h3>
 </div>
 
