--- a/index.html
+++ b/index.html
@@ -1045,13 +1045,13 @@ footer {
     <img src="Recuperacao/Recuperacao6.jpg" alt="Veículo recuperado 6" />
   </div>
 
-<div style="text-align:center; margin: 30px auto; max-width: 800px; background: linear-gradient(135deg, #3498db, #2ecc71); border-radius: 12px; padding: 25px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
+<div style="text-align:center; margin: 30px auto; max-width: 800px; background: linear-gradient(135deg, #0d3c61, #22c55e); border-radius: 12px; padding: 25px; box-shadow: 0 5px 15px rgba(0,0,0,0.2); border: 1px solid rgba(255,255,255,0.15);">
   <h3 style="font-size: 26px; font-weight: 700; color: #fff; line-height: 1.4; margin: 0; text-shadow: 1px 1px 3px rgba(0,0,0,0.2);">
-    🔒 Rastreamento completo por <span style="background: rgba(255,255,255,0.2); padding: 2px 8px; border-radius: 6px;">MENOS DE R$ 2 POR DIA</span>! 
-    <br>Mais barato que um cafézinho! ☕
+    🔒 Por apenas <span style="background: rgba(255,255,255,0.2); padding: 2px 8px; border-radius: 6px; font-weight: 800;">R$ 1,83 por dia</span> você tem 
+    <span style="color: #86efac;">segurança 24h</span> e suporte o ano todo! 
+    <br>Mais barato que um lanche! 🍔
   </h3>
 </div>
-
 
   <!-- Planos -->
   <div class="planos-container">
