--- a/index.html
+++ b/index.html
@@ -1045,14 +1045,26 @@ footer {
     <img src="Recuperacao/Recuperacao6.jpg" alt="Veículo recuperado 6" />
   </div>
 
-<div style="text-align:center; margin: 40px auto; max-width: 800px;">
-  <h3 style="font-size: 24px; font-weight: 800; color: #22c55e; line-height: 1.4; margin-bottom: 10px;">
-    Menos que um lanche por dia. Mais segurança todos os meses.
+<!-- Chamada de valor (abaixo de "Recuperações Eficientes") -->
+<div style="
+  max-width:1000px;margin:34px auto 10px;padding:18px 20px;
+  border-radius:16px;text-align:center;position:relative;overflow:hidden;
+  background:linear-gradient(135deg,rgba(13,60,97,.35),rgba(8,42,68,.35));
+  border:1px solid rgba(34,197,94,.35);box-shadow:0 10px 30px rgba(2,6,23,.16);
+">
+  <span style="
+    position:absolute;inset:0;pointer-events:none;
+    background:radial-gradient(1200px 260px at 50% -20%,rgba(34,197,94,.18),transparent 60%);
+  "></span>
+  <h3 style="
+    margin:0;font-size:clamp(18px,3.6vw,24px);line-height:1.35;
+    color:#eaf2ff;font-weight:800;letter-spacing:.2px;
+  ">
+    Pense bem: <span style="color:#22c55e">a proteção do seu veículo</span> custa menos do que
+    <span style="white-space:nowrap;border-bottom:2px solid rgba(34,197,94,.65)">aquele lanche que você faz em um único dia</span>.
   </h3>
-  <p style="font-size: 18px; color: #eaf2ff; opacity: 0.9; line-height: 1.6;">
-    Pense bem: a proteção do seu veículo custa menos do que aquele lanche que você faz em um único dia.
-  </p>
 </div>
+
 
 
   <!-- Planos -->
