--- a/index.html
+++ b/index.html
@@ -1045,26 +1045,29 @@ footer {
     <img src="Recuperacao/Recuperacao6.jpg" alt="Veículo recuperado 6" />
   </div>
 
-<!-- Chamada de valor (abaixo de "Recuperações Eficientes") -->
 <div style="
-  max-width:1000px;margin:34px auto 10px;padding:18px 20px;
-  border-radius:16px;text-align:center;position:relative;overflow:hidden;
-  background:linear-gradient(135deg,rgba(13,60,97,.35),rgba(8,42,68,.35));
-  border:1px solid rgba(34,197,94,.35);box-shadow:0 10px 30px rgba(2,6,23,.16);
+  max-width: 1000px; margin: 34px auto 10px; padding: 24px 20px;
+  border-radius: 20px; text-align: center; position: relative; overflow: hidden;
+  background: linear-gradient(135deg, rgba(13, 60, 97, 0.4), rgba(8, 42, 68, 0.4));
+  border: 1px solid rgba(34, 197, 94, 0.4); 
+  box-shadow: 0 12px 36px rgba(2, 6, 23, 0.2);
+  backdrop-filter: blur(8px);
 ">
   <span style="
-    position:absolute;inset:0;pointer-events:none;
-    background:radial-gradient(1200px 260px at 50% -20%,rgba(34,197,94,.18),transparent 60%);
+    position: absolute; inset: 0; pointer-events: none;
+    background: radial-gradient(1200px 300px at 50% -30%, rgba(34, 197, 94, 0.22), transparent 65%);
   "></span>
+  
   <h3 style="
-    margin:0;font-size:clamp(18px,3.6vw,24px);line-height:1.35;
-    color:#eaf2ff;font-weight:800;letter-spacing:.2px;
+    margin: 0; font-size: clamp(19px, 3.8vw, 26px); line-height: 1.4;
+    color: #f0f7ff; font-weight: 800; letter-spacing: 0.3px;
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
+    position: relative; z-index: 1;
   ">
-    Pense bem: <span style="color:#22c55e">a proteção do seu veículo</span> custa menos do que
-    <span style="white-space:nowrap;border-bottom:2px solid rgba(34,197,94,.65)">aquele lanche que você faz em um único dia</span>.
+    Pense bem: <span style="color: #22c55e; text-shadow: 0 0 12px rgba(34, 197, 94, 0.3)">a proteção do seu veículo</span> custa menos do que
+    <span style="white-space: nowrap; border-bottom: 2px solid rgba(34, 197, 94, 0.8); padding-bottom: 2px">aquele lanche que você faz em um único dia</span>.
   </h3>
 </div>
-
 
 
   <!-- Planos -->
