--- a/index.html
+++ b/index.html
@@ -1046,25 +1046,25 @@ footer {
   </div>
 
 <div style="
-  max-width: 1000px; margin: 34px auto 10px; padding: 24px 20px;
-  border-radius: 20px; text-align: center; position: relative; overflow: hidden;
+  max-width: 92vw; margin: 24px auto 10px; padding: 20px 16px;
+  border-radius: 18px; text-align: center; position: relative; overflow: hidden;
   background: linear-gradient(135deg, rgba(13, 60, 97, 0.4), rgba(8, 42, 68, 0.4));
   border: 1px solid rgba(34, 197, 94, 0.4); 
-  box-shadow: 0 12px 36px rgba(2, 6, 23, 0.2);
-  backdrop-filter: blur(8px);
+  box-shadow: 0 8px 24px rgba(2, 6, 23, 0.2);
+  backdrop-filter: blur(6px);
 ">
   <span style="
     position: absolute; inset: 0; pointer-events: none;
-    background: radial-gradient(1200px 300px at 50% -30%, rgba(34, 197, 94, 0.22), transparent 65%);
+    background: radial-gradient(800px 200px at 50% -30%, rgba(34, 197, 94, 0.22), transparent 65%);
   "></span>
   
   <h3 style="
-    margin: 0; font-size: clamp(19px, 3.8vw, 26px); line-height: 1.4;
-    color: #f0f7ff; font-weight: 800; letter-spacing: 0.3px;
-    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
-    position: relative; z-index: 1;
+    margin: 0; font-size: clamp(17px, 4.5vw, 22px); line-height: 1.4;
+    color: #f0f7ff; font-weight: 700; letter-spacing: 0.2px;
+    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
+    position: relative; z-index: 1; padding: 0 4px;
   ">
-    Pense bem: <span style="color: #22c55e; text-shadow: 0 0 12px rgba(34, 197, 94, 0.3)">a proteção do seu veículo</span> custa menos do que
+    Pense bem: <span style="color: #22c55e; text-shadow: 0 0 8px rgba(34, 197, 94, 0.3)">a proteção do seu veículo</span> custa menos do que
     <span style="white-space: nowrap; border-bottom: 2px solid rgba(34, 197, 94, 0.8); padding-bottom: 2px">aquele lanche que você faz em um único dia</span>.
   </h3>
 </div>
