--- a/index.html
+++ b/index.html
@@ -1045,30 +1045,13 @@ footer {
     <img src="Recuperacao/Recuperacao6.jpg" alt="Veículo recuperado 6" />
   </div>
 
-<div style="
-  max-width: 92vw; margin: 24px auto 10px; padding: 20px 16px;
-  border-radius: 18px; text-align: center; position: relative; overflow: hidden;
-  background: linear-gradient(135deg, rgba(13, 60, 97, 0.4), rgba(8, 42, 68, 0.4));
-  border: 1px solid rgba(34, 197, 94, 0.4); 
-  box-shadow: 0 8px 24px rgba(2, 6, 23, 0.2);
-  backdrop-filter: blur(6px);
-">
-  <span style="
-    position: absolute; inset: 0; pointer-events: none;
-    background: radial-gradient(800px 200px at 50% -30%, rgba(34, 197, 94, 0.22), transparent 65%);
-  "></span>
-  
-  <h3 style="
-    margin: 0; font-size: clamp(17px, 4.5vw, 22px); line-height: 1.4;
-    color: #f0f7ff; font-weight: 700; letter-spacing: 0.2px;
-    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
-    position: relative; z-index: 1; padding: 0 4px;
-  ">
-    Pense bem: <span style="color: #22c55e; text-shadow: 0 0 8px rgba(34, 197, 94, 0.3)">a proteção do seu veículo</span> custa menos do que
-    <span style="white-space: nowrap; border-bottom: 2px solid rgba(34, 197, 94, 0.8); padding-bottom: 2px">aquele lanche que você faz em um único dia</span>.
+<div style="text-align:center; margin: 30px auto; max-width: 800px; background: linear-gradient(135deg, #0d3c61, #22c55e); border-radius: 12px; padding: 25px; box-shadow: 0 5px 15px rgba(0,0,0,0.2); border: 1px solid rgba(255,255,255,0.15);">
+  <h3 style="font-size: 26px; font-weight: 700; color: #fff; line-height: 1.4; margin: 0; text-shadow: 1px 1px 3px rgba(0,0,0,0.2);">
+    🔒 Por apenas <span style="background: rgba(255,255,255,0.2); padding: 2px 8px; border-radius: 6px; font-weight: 800;">R$ 1,83 por dia</span> você tem 
+    <span style="color: #86efac;">segurança 24h</span> e suporte o ano todo! 
+    <br>Mais barato que um lanche! 🍔
   </h3>
 </div>
-
 
   <!-- Planos -->
   <div class="planos-container">
