--- a/index.html
+++ b/index.html
@@ -1045,13 +1045,35 @@ footer {
     <img src="Recuperacao/Recuperacao6.jpg" alt="Veículo recuperado 6" />
   </div>
 
-<div style="text-align:center; margin: 30px auto; max-width: 800px; background: linear-gradient(135deg, #0d3c61, #22c55e); border-radius: 12px; padding: 25px; box-shadow: 0 5px 15px rgba(0,0,0,0.2); border: 1px solid rgba(255,255,255,0.15);">
-  <h3 style="font-size: 26px; font-weight: 700; color: #fff; line-height: 1.4; margin: 0; text-shadow: 1px 1px 3px rgba(0,0,0,0.2);">
-    🔒 Por apenas <span style="background: rgba(255,255,255,0.2); padding: 2px 8px; border-radius: 6px; font-weight: 800;">R$ 1,83 por dia</span> você tem 
-    <span style="color: #86efac;">segurança 24h</span> e suporte o ano todo! 
-    <br>Mais barato que um lanche! 🍔
+<!-- Chamada de valor (abaixo do carrossel e antes dos Planos) -->
+<div style="
+  text-align:center;margin:34px auto 12px;max-width:980px;
+  background:linear-gradient(135deg,#0d3c61,#22c55e);
+  border-radius:16px;padding:24px 22px;
+  box-shadow:0 10px 28px rgba(2,6,23,.22);
+  border:1px solid rgba(255,255,255,.18);
+  position:relative;overflow:hidden
+">
+  <!-- brilho sutil -->
+  <span style="
+    position:absolute;inset:-1px;pointer-events:none;
+    background:radial-gradient(800px 200px at 50% -20%,rgba(255,255,255,.12),transparent 60%)
+  "></span>
+
+  <h3 style="
+    margin:0;font-size:clamp(18px,3.8vw,26px);line-height:1.4;
+    color:#fff;font-weight:800;text-shadow:0 1px 3px rgba(0,0,0,.18)
+  ">
+    🔒 Por apenas
+    <span style="
+      display:inline-block;padding:3px 10px;border-radius:999px;
+      background:rgba(255,255,255,.22);font-weight:900
+    ">R$ 1,83 por dia</span>
+    você tem <span style="color:#86efac">segurança 24h</span> e suporte o ano todo —
+    <span style="white-space:nowrap;border-bottom:2px solid rgba(255,255,255,.35);padding-bottom:2px">mais barato que um lanche 🍔</span>
   </h3>
 </div>
+
 
   <!-- Planos -->
   <div class="planos-container">
