--- a/index.html
+++ b/index.html
@@ -1069,8 +1069,8 @@ footer {
       display:inline-block;padding:3px 10px;border-radius:999px;
       background:rgba(255,255,255,.22);font-weight:900
     ">R$ 1,83 por dia</span>
-    você tem <span style="color:#86efac">segurança 24h</span> e suporte o ano todo —
-    <span style="white-space:nowrap;border-bottom:2px solid rgba(255,255,255,.35);padding-bottom:2px">mais barato que um lanche 🍔</span>
+    você tem <span style="color:#86efac">segurança 24h</span> e suporte o ano todo!
+    <span style="white-space:nowrap;border-bottom:2px solid rgba(255,255,255,.35);padding-bottom:2px">Pense: É mais barato que um lanche 🍔 que você faz em alguns minutos</span>
   </h3>
 </div>
 
