--- a/index.html
+++ b/index.html
@@ -1045,7 +1045,6 @@ footer {
     <img src="Recuperacao/Recuperacao6.jpg" alt="Veículo recuperado 6" />
   </div>
 
-<!-- Chamada de valor (abaixo do carrossel e antes dos Planos) -->
 <div style="
   text-align:center;margin:34px auto 12px;max-width:980px;
   background:linear-gradient(135deg,#0d3c61,#22c55e);
@@ -1054,7 +1053,6 @@ footer {
   border:1px solid rgba(255,255,255,.18);
   position:relative;overflow:hidden
 ">
-  <!-- brilho sutil -->
   <span style="
     position:absolute;inset:-1px;pointer-events:none;
     background:radial-gradient(800px 200px at 50% -20%,rgba(255,255,255,.12),transparent 60%)
@@ -1068,11 +1066,12 @@ footer {
     <span style="
       display:inline-block;padding:3px 10px;border-radius:999px;
       background:rgba(255,255,255,.22);font-weight:900
-    ">R$ 1,83 por dia</span>
-    você tem <span style="color:#86efac">segurança 24h</span> e suporte o ano todo!
-    <span style="white-space:nowrap;border-bottom:2px solid rgba(255,255,255,.35);padding-bottom:2px">Pense: É mais barato que um lanche 🍔 que você faz em alguns minutos</span>
+    ">R$ <span id="valor-diario-banner">1,83</span> por dia</span>
+    você tem <span style="color:#86efac">segurança 24h</span> e suporte o ano todo —
+    <span style="white-space:nowrap;border-bottom:2px solid rgba(255,255,255,.35);padding-bottom:2px">mais barato que um lanche 🍔</span>
   </h3>
 </div>
+
 
 
   <!-- Planos -->
