--- a/index.html
+++ b/index.html
@@ -1045,6 +1045,7 @@ footer {
     <img src="Recuperacao/Recuperacao6.jpg" alt="Veículo recuperado 6" />
   </div>
 
+<!-- Chamada de valor (abaixo do carrossel e antes dos Planos) -->
 <div style="
   text-align:center;margin:34px auto 12px;max-width:980px;
   background:linear-gradient(135deg,#0d3c61,#22c55e);
@@ -1066,13 +1067,13 @@ footer {
     <span style="
       display:inline-block;padding:3px 10px;border-radius:999px;
       background:rgba(255,255,255,.22);font-weight:900
-    ">R$ <span id="valor-diario-banner">1,83</span> por dia</span>
+    ">R$ 1,83 por dia</span>
     você tem <span style="color:#86efac">segurança 24h</span> e suporte o ano todo —
-    <span style="white-space:nowrap;border-bottom:2px solid rgba(255,255,255,.35);padding-bottom:2px">mais barato que um lanche 🍔</span>
+    <span style="white-space:nowrap;border-bottom:2px solid rgba(255,255,255,.35);padding-bottom:2px">
+      Mais barato que um lanche 🍔 — em um único dia.
+    </span>
   </h3>
 </div>
-
-
 
   <!-- Planos -->
   <div class="planos-container">
