--- a/index.html
+++ b/index.html
@@ -1063,14 +1063,14 @@ footer {
     margin:0;font-size:clamp(18px,3.8vw,26px);line-height:1.4;
     color:#fff;font-weight:800;text-shadow:0 1px 3px rgba(0,0,0,.18)
   ">
-    🔒 Por apenas
+    ⬇️ Por apenas
     <span style="
       display:inline-block;padding:3px 10px;border-radius:999px;
       background:rgba(255,255,255,.22);font-weight:900
     ">R$ 1,83 por dia</span>
     você tem <span style="color:#86efac">segurança 24h</span> e suporte o ano todo —
     <span style="white-space:nowrap;border-bottom:2px solid rgba(255,255,255,.35);padding-bottom:2px">
-      Mais barato que um lanche 🍔 — em um único dia.
+      Mais barato que um lanche 🍔<br>em um único dia.
     </span>
   </h3>
 </div>
