--- a/index.html
+++ b/index.html
@@ -1067,7 +1067,7 @@ footer {
     <span style="
       display:inline-block;padding:3px 10px;border-radius:999px;
       background:rgba(255,255,255,.22);font-weight:900
-    ">R$ 1,83 por dia</span>
+    ">R$ 54,90 por mês</span>
     você tem <span style="color:#86efac">segurança 24h</span> e suporte o ano todo —
     <span style="white-space:nowrap;border-bottom:2px solid rgba(255,255,255,.35);padding-bottom:2px">
       Mais barato que um lanche 🍔<br>em um único dia.
