--- a/index.html
+++ b/index.html
@@ -1068,9 +1068,9 @@ footer {
       display:inline-block;padding:3px 10px;border-radius:999px;
       background:rgba(255,255,255,.22);font-weight:900
     ">R$ 54,90 por mês</span>
-    você tem <span style="color:#86efac">segurança 24h</span> e suporte o ano todo —
+    você tem <span style="color:#86efac">segurança 24h</span> e suporte o ano todo!<br> Pense bem:
     <span style="white-space:nowrap;border-bottom:2px solid rgba(255,255,255,.35);padding-bottom:2px">
-      Mais barato que um lanche 🍔<br>em um único dia.
+      É mais barato que um lanche 🍔<br>de um único dia.
     </span>
   </h3>
 </div>
