--- a/index.html
+++ b/index.html
@@ -1068,7 +1068,7 @@ footer {
       display:inline-block;padding:3px 10px;border-radius:999px;
       background:rgba(255,255,255,.22);font-weight:900
     ">R$ 54,90 por mês</span>
-    você tem <span style="color:#a60101">segurança 24h</span> e suporte o ano todo!<br> <span style="color:#86efac">Pense bem:</span>
+    você tem <span style="color:#86efac">segurança 24h</span> e suporte o ano todo!<br> <span style="color:#092749">Pense bem:</span>
     <span style="white-space:nowrap;border-bottom:2px solid rgba(255,255,255,.35);padding-bottom:2px">
       É mais barato que um lanche 🍔<br>de um único dia.
     </span>
