--- a/index.html
+++ b/index.html
@@ -1046,34 +1046,12 @@ footer {
   </div>
 
 <!-- Chamada de valor (abaixo do carrossel e antes dos Planos) -->
-<div style="
-  text-align:center;margin:34px auto 12px;max-width:980px;
-  background:linear-gradient(135deg,#0d3c61,#22c55e);
-  border-radius:16px;padding:24px 22px;
-  box-shadow:0 10px 28px rgba(2,6,23,.22);
-  border:1px solid rgba(255,255,255,.18);
-  position:relative;overflow:hidden
-">
-  <span style="
-    position:absolute;inset:-1px;pointer-events:none;
-    background:radial-gradient(800px 200px at 50% -20%,rgba(255,255,255,.12),transparent 60%)
-  "></span>
-
-  <h3 style="
-    margin:0;font-size:clamp(18px,3.8vw,26px);line-height:1.4;
-    color:#fff;font-weight:800;text-shadow:0 1px 3px rgba(0,0,0,.18)
-  ">
-    ⬇️ Por apenas
-    <span style="
-      display:inline-block;padding:3px 10px;border-radius:999px;
-      background:rgba(255,255,255,.22);font-weight:900
-    ">R$ 49,90 por mês</span>
-    você tem <span style="color:#86efac">segurança 24h</span> e suporte o ano todo!<br> <span style="color:#092749">Pense bem:</span>
-    <span style="white-space:nowrap;border-bottom:2px solid rgba(255,255,255,.35);padding-bottom:2px">
-      É mais barato que um lanche 🍔<br>de um único dia.
-    </span>
+<div style="text-align:center; margin: 30px auto; max-width: 800px;">
+  <h3 style="font-size: 22px; font-weight: 700; color: #fff; line-height: 1.4;">
+  Pense bem: valor que você paga por mês em seguraça é mais barato que um lanche que você faz em um único dia.
   </h3>
 </div>
+
 
   <!-- Planos -->
   <div class="planos-container">
