--- a/index.html
+++ b/index.html
@@ -1048,7 +1048,7 @@ footer {
 <!-- Chamada de valor (abaixo do carrossel e antes dos Planos) -->
 <div style="text-align:center; margin: 30px auto; max-width: 800px;">
   <h3 style="font-size: 22px; font-weight: 700; color: #fff; line-height: 1.4;">
-  Pense bem: valor que você<br> paga por mês em seguraça é mais<br> barato que um lanche que você faz em um único dia.
+  Pense bem: O valor que você<br> paga por mês em seguraça<br> é mais barato que um lanche<br> que você faz em um único dia.
   </h3>
 </div>
 
