--- a/index.html
+++ b/index.html
@@ -1046,10 +1046,15 @@ footer {
   </div>
 
 <!-- Chamada de valor (abaixo do carrossel e antes dos Planos) -->
-<div style="text-align:center; margin: 30px auto; max-width: 800px;">
-  <h3 style="font-size: 22px; font-weight: 700; color: #fff; line-height: 1.4;">
-  💭 Pense bem: O valor que você<br> paga por mês em seguraça<br> é mais barato que um lanche<br> que você faz em um único dia.
-  </h3>
+<div style="text-align:center; margin: 30px auto; max-width: 840px;">
+  <div style="display:inline-block; padding:16px 20px; border-radius:12px; background:rgba(255,255,255,0.06); border:1px solid rgba(255,255,255,0.15); box-shadow:0 6px 18px rgba(0,0,0,0.25); backdrop-filter:blur(6px);">
+    <h3 style="font-size:22px; font-weight:800; color:#fff; line-height:1.4; margin:0;">
+      💭 Pense bem: o valor que você<br>
+      paga por mês em segurança<br>
+      é mais barato que um lanche 🍔<br>
+      que você faz em um único dia.
+    </h3>
+  </div>
 </div>
 
 
